examples/test/testpolicy2980.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2980
  namespace: namespace222
spec:
  podSelector:
    matchLabels:
      key11: value8
      key3: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value44
          key45: value17
          key7: value36
      podSelector:
        matchLabels:
          key33: value46
          key19: value7
          key8: value33
